--- a/src/components/CreateEmployee/create-employee.css
+++ b/src/components/CreateEmployee/create-employee.css
@@ -132,3 +132,40 @@
         margin-bottom: 0.5rem;
     }
 }
+
+/* Modal */
+.modal {
+    background-color: rgba(0, 0, 0, 0.4);
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    width: 100%;
+    height: 100%;
+}
+
+.modal__container {
+    max-width: 600px;
+    width: 100%;
+    padding: 2rem;
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    display: flex;
+    justify-content: space-between;
+    background-color: rgb(26, 188, 156);
+    border-radius: 1rem;
+    box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.7);
+}
+
+.modal__text {
+    font-weight: 600;
+    color: #fff;
+}
+
+.modal__icon {
+    font-size: 1.2rem;
+    color: #fff;
+}
