--- a/src/components/EmployeeTable/table.css
+++ b/src/components/EmployeeTable/table.css
@@ -1,3 +1,66 @@
+.filters {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    margin-bottom: 1rem;
+}
+
+.select {
+    position: relative;
+    display: grid;
+    grid-template-areas: "select";
+    align-items: center;
+    width: 100%;
+    min-width: 15ch;
+    max-width: 30ch;
+    border: 1px solid #777;
+    border-radius: 1rem;
+    padding: 0.25em 0.5em;
+    font-size: 1.25rem;
+    cursor: pointer;
+    line-height: 1.1;
+    background-color: #fff;
+    background-image: linear-gradient(to top, #f9f9f9, #fff 33%);
+}
+
+.select select,
+.select::after {
+    grid-area: select;
+}
+
+.select::after {
+    content: "";
+    width: 0.8rem;
+    height: 0.5rem;
+    justify-self: end;
+    background-color: #777;
+    clip-path: polygon(100% 0%, 0 0%, 50% 100%);
+}
+
+.select select {
+    position: relative;
+    appearance: none;
+    background-color: transparent;
+    border: none;
+    padding: 0 1em 0 0;
+    margin: 0;
+    width: 100%;
+    font-family: inherit;
+    cursor: inherit;
+    line-height: inherit;
+    z-index: 1;
+}
+
+.select select:focus + .focus {
+    position: absolute;
+    top: -1px;
+    left: -1px;
+    right: -1px;
+    bottom: -1px;
+    border: 1px solid rgb(26, 188, 156);
+    border-radius: inherit;
+}
+
 .table {
     border-collapse: collapse;
 }
@@ -19,13 +82,41 @@
 .table__search {
     display: flex;
     justify-content: flex-end;
-    margin-bottom: 1rem;
 }
 
 .table__search input {
-    padding: 3px;
+    padding: 3px 0 3px 10px;
     border: 1px solid #777;
     font-size: 1rem;
+    border-radius: 1rem;
+}
+
+.table__search input:focus {
+    border: 1px solid rgb(26, 188, 156);
+}
+
+.pagination {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    margin-top: 8px;
+    gap: 8px;
+    font-size: 14px;
+}
+
+.pagination button {
+    padding: 8px;
+    border-radius: 1rem;
+}
+
+.pagination__index {
+    display: flex;
+    align-items: center;
+    gap: 1rem;
+}
+
+.pagination__index .index-btn {
+    margin-right: 10px;
 }
 
 @media screen and (max-width: 992px) {
@@ -42,5 +133,17 @@
     .table th,
     .table td {
         padding: 4px;
+    }
+}
+
+@media screen and (max-width: 700px) {
+    .table td {
+        text-align: right;
+    }
+
+    .filters {
+        flex-direction: column;
+        align-items: start;
+        gap: 10px;
     }
 }
