--- a/src/components/Header/header.css
+++ b/src/components/Header/header.css
@@ -1,7 +1,11 @@
 .header {
+    flex-direction: column;
     align-items: center;
     justify-content: center;
-    padding: 1rem 0;
-    background-color: rgb(26, 188, 156);
-    color: #fff;
+    padding: 10px 0 0 0;
+    color: #000;
+}
+
+.header img {
+    width: 150px;
 }
