--- a/src/components/CreateEmployee/create-employee.css
+++ b/src/components/CreateEmployee/create-employee.css
@@ -20,11 +20,10 @@
 }
 
 .employee__title-link {
-    color: #000;
+    color: rgb(26, 188, 156);
 }
 
 .employee__title-link:hover {
-    color: rgb(26, 188, 156);
     border-bottom: 1px solid rgb(26, 188, 156);
 }
 
@@ -32,23 +31,22 @@
     width: 600px;
     display: grid;
     gap: 1rem;
+    padding: 1rem;
+    border-radius: 1rem;
 }
 
-.input__group {
-    margin-bottom: 5px;
+fieldset {
+    margin-block: 1rem;
+}
+
+fieldset .input__group {
+    margin-bottom: 1rem;
 }
 
 .input__group,
 .select__group {
     display: flex;
     flex-direction: column;
-}
-
-.input__group label,
-.select__group label {
-    margin-bottom: .5rem;
-    color: #777;
-    font-weight: 600;
 }
 
 .input__group input {
@@ -58,14 +56,6 @@
 .input__group select,
 .select__group select {
     width: 400px;
-}
-
-.input__group input,
-.input__group select,
-.select__group select {
-    padding: 6px;
-    border: 1px solid #777;
-    font-size: 1rem;
 }
 
 .employee__address {
@@ -85,11 +75,12 @@
 }
 
 .employee__form-button {
+    width: 100%;
+    margin-top: 1rem;
     display: flex;
     justify-content: center;
     justify-self: center;
     align-items: center;
-    max-width: 150px;
 }
 
 @media screen and (max-width: 768px) {
@@ -139,41 +130,4 @@
     .employee__title h2 {
         margin-bottom: 0.5rem;
     }
-}
-
-/* Modal */
-.modal {
-    background-color: rgba(0, 0, 0, 0.4);
-    position: fixed;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    width: 100%;
-    height: 100%;
-}
-
-.modal__container {
-    max-width: 600px;
-    width: 100%;
-    padding: 2rem;
-    position: fixed;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    display: flex;
-    justify-content: space-between;
-    background-color: rgb(26, 188, 156);
-    border-radius: 1rem;
-    box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.7);
-}
-
-.modal__text {
-    font-weight: 600;
-    color: #fff;
-}
-
-.modal__icon {
-    font-size: 1.2rem;
-    color: #fff;
 }
