--- a/src/components/Header/header.css
+++ b/src/components/Header/header.css
@@ -1,11 +1,39 @@
 .header {
-    flex-direction: column;
     align-items: center;
-    justify-content: center;
-    padding: 10px 0 0 0;
+    justify-content: space-between;
+    padding: 10px 1rem;
+    border-bottom:  1px solid rgba(0, 0, 0, 0.2);
+    box-shadow: 0px 0px 1px 0px rgba(0, 0, 0, 0.2);
     color: #000;
 }
 
+.header__logo {
+    align-items: center;
+    column-gap: 1rem;
+}
+
 .header img {
-    width: 150px;
+    width: 60px;
+}
+
+.header__title:hover {
+    color: rgb(26, 188, 156);
+}
+
+.nav__title {
+    color: rgb(26, 188, 156);
+}
+
+.nav__title:hover {
+    color: rgb(26, 188, 156);
+    border-bottom: 1px solid rgb(26, 188, 156);
+}
+
+.nav__icon {
+    margin-right: 1rem;
+    font-size: 1.25rem;
+}
+
+.nav__icon:hover {
+    color: rgb(26, 188, 156);
 }
