--- a/src/components/Header/header.css
+++ b/src/components/Header/header.css
@@ -2,9 +2,9 @@
     align-items: center;
     justify-content: space-between;
     padding: 10px 1rem;
-    border-bottom:  1px solid rgba(0, 0, 0, 0.2);
-    box-shadow: 0px 0px 1px 0px rgba(0, 0, 0, 0.2);
+    box-shadow: 0 0 2px 0 rgba(0, 0, 0, 0.2);
     color: #000;
+    background-color: #fff;
 }
 
 .header__logo {
